# ALSProlog

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  1-The-Syntax-of-ALS-Prolog.md  10-Prolog-I-O.md  11-Prolog-Builtins:-Non-I-O.md  12-The-ALS-Library-Mechanism.md  13-Using-the-Prolog-Shell.md  14-Using-the-Four-Port-Debugger.md  15-Packaging-for-Delivery.md  16-ALS-IDE.md  18-ALS-Prolog---TclTk-Interface.md  18-Using-the-ALS-IDE-Debugger.md  19-Using-the-ALS-Foreign-Interface.md  19-Using-the-GUI-Library.md  2-Prolog-Source-Code.md  20-ALS-Prolog---TclTk-Interface.md  21-Using-the-ALS-Foreign-Interface.md  3-Modules.md  4-Using-Definite-Clause-Grammars.md  5-Abstract-Data-Types:-Structure-Definition.md  6-ObjectPro:-Object-Oriented-Programming.md  7-Working-with-Uninterned-Atoms.md  8-Global-Variables,-Destructive-Update-&-Hash-Tables.md  9-Freeze,-Exceptions,-Events,-Interrupts,-Signals.md  ALS-Prolog-Language:-Extensions.md  ALS-Prolog-Language:-Standard-Part.md  Build  Build.bat  CMakeLists.txt  Home.md  LICENSE.txt  Makefile  README  README.md  README.txt  _Sidebar.md  cibuild  format-subst  (+4 more)
core/alsp_src/: CMakeLists.txt  README-OLD  aclocal.m4  config.d.in  config.guess  configur.bat  configure  configure.in  makefile.in  mkdist  readme  sharbld
core/alsp_src/bld-port/: makefile.abs  makefile.dj2  makefile.in  makefile.mac  makefile.os2  makefile.unix  tconfig.h.in  tconfig.in
core/alsp_src/builtins/: blt_als.pro  blt_atom.pro  blt_brk.pro  blt_cslt.pro  blt_ctl.pro  blt_curl.pro  blt_db.pro  blt_dvsh.pro  blt_evt.pro  blt_flgs.pro  blt_frez.pro  blt_intv_frez.pro  blt_io.pro  blt_is.pro  blt_lib.pro  blt_misc.pro  blt_msg.pro  blt_pckg.pro  blt_shl.pro  blt_shlc.pro  blt_shlr.pro  blt_std.pro  blt_stk.pro  blt_sys.pro  blt_term.pro  builtins.pro  comp_d10.pro  cutils.pro  db_srctr.pro  db_srctr.typ  dbg_class.pro  dcgs.pro  debugger.pro  filepath.pro  fs_cmn.pro  fsdos.pro  fsdos386.pro  fsmac.pro  fsmsw95.pro  fsunix.pro  (+19 more)
core/alsp_src/cinterf/: readme
core/alsp_src/cinterf/c2pro/: c2p.mac  c2p.pro  c2p.typ  c2pro  cdos  cexp  cfiles  cmac  cmacro  cout  cparse  ctoken  cunix  cvms  makefile  tc2pdos.pro  tc2pmac.pro  tc2punix.pro  tc2pvms.pro  trans_c2pro_dos.pro  trans_c2pro_mac.pro  trans_c2pro_unix.pro  trans_c2pro_vms.pro
core/alsp_src/cinterf/pro2intf/: intfout  makefile  mytrans  p2i.mac  p2i.pro  p2i.typ  pro2intf  tp2intf.pro  (+2 more)
core/alsp_src/doc/: ChangeLog  ChangeLog.92  ChangeLog.95  Mac_ALSPro_Build_Instrs  NEWS  Win32_ALSPro_Build_Instrs  als-mics.faq  alspro.1  clpbnr_status.html  debugsys.doc  ieee.doc  irix  perform  status.html  status_toc.html  top_status.html
core/alsp_src/generic/: alloc.c  alloc.doc  alloc.h  alsglue.c  alsmem.h  alspi.h  alspi_slib.c  alspi_slib.exp  alspi_slib.h  alspi_stub.c  alspro.exp  alspro_dll.exp  alssig.h  alstypes.h  ansi_engine.c  arith.c  arith_co.c  bcinter.c  bcurl.c  bdb.c  bdbg.c  bgv.c  bio.c  bmeta.c  bmisc.c  bos.c  bparser.c  bpckg.c  bsio.c  bsio.h  bsystem.c  built.c  built.h  butil.c  cassert.c  cassert.h  cexception.c  cexception.h  chpt.h  chpt.h.frame  (+126 more)
core/alsp_src/interval/: genC_ie.original  interval.h  interval_orig.c  pseudocode.original  relarith.orig
core/alsp_src/macos/: ALS Prolog Installer.sit.hqx  ALS_SIOUX.c  Build_MacOS.sit.hqx  MacOS_Build_Instructions  alspro.proj.sit.hqx  alspro_b.proj.sit.hqx  alspro_lib.proj.sit.hqx  alspro_slib.proj.sit.hqx  alsres.r  builtins.r  cw_plugin_prefix.h  mac_setup  macio.c  macos_config.h  macos_engine.c  macos_locate.c  mw_alspro_prefix.h
core/alsp_src/mwbuild/: Build_Instructions  CWP4_macos.mcp  CWP4_win32.mcp  base.mcp  library.mcp  macos.mcp  make_image.bat  win32.mcp  win32_base.mcp
core/alsp_src/pconfig/: cfgimg.pro  cfglink.pro  makeimg.in  makeintf.in  makelink.in  mkdist.pro  pconfig.pro  sharalsp.pro
core/alsp_src/port/: aconfig.h  disassem.c  icode1.c  icode2.c  index.c  labels.h  machinst.h  mh-port  mtypes.h  port.abs  port.dj  port.dj2  port.mac  port.mkf  port.os2  port.unix  port.w31  port_makefile  wam.c  wam.doc.freeze  wam.frame  wamreg.h
core/alsp_src/smath/: IAbool.c  IAexp.c  IAsmath.c  IAtrig.c  bool.c  exp.c  ieee_exp.c  ieee_trig.c  ieeemath.c  ieeemath.h  nonlog.c  smath.c  smath.h  trig.c
core/alsp_src/tests/: atest_db.pro  autotest.pro  snrev.obp  snrev.pro  test.pro
core/alsp_src/unix/: Unix_Build_Instructions  aix_config.h  aix_makefile  build_all  cc_makefile  clang_makefile  compat_glob.c  compat_glob.h  cygwin32_config.h  cygwin32_makefile  darwin_config.h  darwin_makefile  egcs_makefile  gcc_makefile  glibc20-cc  glibc20-cc_makefile  hpux_config.h  hpux_makefile  irix_config.h  irix_makefile  linenoise.c  linux_config.h  linux_makefile  missing.c  missing.h  port_config.h  port_makefile  sgicc_makefile  solaris_config.h  solaris_makefile  sunos_config.h  sunos_makefile  unix_config.h  unix_engine.c  unix_locate.c  unix_makefile  unix_setup  unix_shared.c  unix_static.c  unixio.c
core/alsp_src/win32/: Build_Win32.sit.hqx  MSLExitFix.c  MWCRTLfix.c  Win32_ALSPro_Build_Instrs  Win32_Build_Instructions  alspro.rc  alspro_b.prj.sit.hqx  alspro_dll.prj.sit.hqx  alspro_lib.prj.sit.hqx  dll_x86_prefix.h  gcc_makefile  image_compiler.c  mswin32_config.h  mw_alspro_x86_prefix.h  package.sh  testdll.x86.prj.sit.hqx  testrun.bat  testrun.sh  win32_engine.c  win32_locate.c  win32_makefile  win32_setup  win32io.c  x87_fpsetround.c  x87_fpsetround.h
tcltk_extensions/tkTable1.80/: CHANGES  Makefile.in  README  README.blt  README.itcl  TODO  UPGRADING  configure  configure.in  mac_tkTable.mcp  mac_tkTable.r  mac_tkTable_prefix.h  makefile.vc  tkAppInit.c  tkTable.c  tkTable.h  tkTable.html  tkTable.itcl  tkTable.n  tkTable.tcl
tcltk_extensions/tkTable1.80/demos/: basic.tcl  buttons.tcl  class.itcl  command.tcl  dynarows.tcl  spreadsheet.itk  spreadsheet.tcl  valid.tcl
tcltk_extensions/tkTable2.2/src/: Makefile.in  cmd.c  cmd.h  configure  configure.in  mac_tkTable.mcp  mac_tkTable.r  mac_tkTable_prefix.h  makefile.vc  tkAppInit.c  tkTable.c  tkTable.h  tkTableCell.c  tkTablePs.c  version.in
(+2746 files in other folders)
